--- a/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
+++ b/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
@@ -8,3 +8,7 @@
   top: 40px;
   width: 100%;
 }
+
+#ws-core-c-text-input-group-search-input-group-advanced-search-expanded-with-autocomplete {
+  height: 540px;
+}
