feat(workspace): added functional support to ws

--- a/src/patternfly/components/ExampleComponent/example-component-title.hbs
+++ b/src/patternfly/components/ExampleComponent/example-component-title.hbs
@@ -1,7 +1,6 @@
 {{#>
   config
-  className='{nameDasherized}'
-  theme=''
+  className='example-component__title'
 }}
 
 <div class="{{> set-class}}"
