--- a/src/patternfly/components/_all.scss
+++ b/src/patternfly/components/_all.scss
@@ -1,3 +1,4 @@
+@import "./ExampleComponent/example-component";
 @import "./AboutModalBox/about-modal-box";
 @import "./Accordion/accordion";
 @import "./ActionList/action-list";
