--- a/src/patternfly/components/ExampleComponent/example-component-footer.hbs
+++ b/src/patternfly/components/ExampleComponent/example-component-footer.hbs
@@ -1,7 +1,6 @@
 {{#>
   config
-  className='{nameDasherized}'
-  theme=''
+  className='example-component__footer'
 }}
 
 <div class="{{> set-class}}"
