--- a/src/patternfly/utilities/Text/text.scss
+++ b/src/patternfly/utilities/Text/text.scss
@@ -2,22 +2,22 @@
 
 // Font family options
 $pf-v5-u-font-family-options: (
-  font-family-sans-serif: (
+  font-family-text: (
     font-family var(--#{$pf-global}--FontFamily--text)
   ),
-  font-family-heading-sans-serif: (
+  font-family-heading: (
     font-family var(--#{$pf-global}--FontFamily--heading)
   ),
   font-family-monospace: (
     font-family var(--#{$pf-global}--FontFamily--monospace)
   ),
-  font-family-redhatVF-sans-serif: (
+  font-family-text-vf: (
     font-family var(--#{$pf-global}--FontFamily--text--vf)
   ),
-  font-family-redhatVF-heading-sans-serif: (
+  font-family-heading-vf: (
     font-family var(--#{$pf-global}--FontFamily--heading--vf)
   ),
-  font-family-redhatVF-monospace: (
+  font-family-monospace-vf: (
     font-family var(--#{$pf-global}--FontFamily--monospace--vf)
   )
 );
