--- a/src/patternfly/components/Table/table-tbody.hbs
+++ b/src/patternfly/components/Table/table-tbody.hbs
@@ -1,4 +1,4 @@
-<tbody class="
+<tbody class="{{pfv}}table__tbody
   {{~#if table-tbody--IsClickable}} pf-m-clickable{{/if}}
   {{~#if table-tbody--IsSelected}} pf-m-selected{{/if}}
   {{~#if table-tbody--IsExpanded}} pf-m-expanded{{/if}}
