--- a/src/patternfly/components/Table/table-thead.hbs
+++ b/src/patternfly/components/Table/table-thead.hbs
@@ -1,4 +1,5 @@
-<thead class="{{#if table-thead--modifier}}{{table-thead--modifier}}{{/if}}{{#if table-thead--IsNested}} pf-m-nested-column-header{{/if}}"
+<thead class="{{pfv}}table__thead
+  {{#if table-thead--modifier}}{{table-thead--modifier}}{{/if}}{{#if table-thead--IsNested}} pf-m-nested-column-header{{/if}}"
   {{#if table-thead--attribute}}
     {{{table-thead--attribute}}}
   {{/if}}>
